--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
       </header>
       <main class="site-main">
-        <section id="about" class="page-section">
+        <section id="about" class="page-section clearfix">
           <p>Frontline maximize combat malaria; donation generosity. Global health capacity building free expression complexity tackle. Resourceful freedom, donate crowdsourcing best practices social impact agency. Micro-finance, cooperation fellows, planned giving healthcare connect worldwide, eradicate marginalized communities.</p>
         </section>
         <section id="portfolio" class="page-section">
@@ -48,9 +48,9 @@
         <section id="contact" class="page-section">
           <h1>Contact Us</h1>
           <ul>
-            <li><a href="">Email</a></li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Twitter</a></li>
+            <li><a href="#">Email</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
           </ul>
         </section>
       </main>
